--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "tpyo/amazon-s3-php-class": "^0.5.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.4",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
