--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelnews/laravel-twbs4": "^1.2",
+        "php-opencloud/openstack": "^3.0",
         "tpyo/amazon-s3-php-class": "^0.5.1"
     },
     "require-dev": {
