--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.0.0",
         "elasticsearch/elasticsearch": "^6.0",
         "fideloper/proxy": "~3.3",
+        "gorhill/php-fine-diff": "dev-multibyte",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelnews/laravel-twbs4": "^1.2",
@@ -22,6 +23,12 @@
         "phpunit/phpunit": "~6.0",
         "symfony/thanks": "^1.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/BillyNate/PHP-FineDiff"
+        }
+    ],
     "autoload": {
         "classmap": [
             "database/seeds",
