--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
 /node_modules
-/public/hot
-/public/storage
-/public/js
 /public/css
+/public/hot
+/public/img
+/public/js
 /public/mix-manifest.json
+/public/storage
 /storage/*.key
 /vendor
 /.idea
 /.vagrant
+/_ide_helper.php
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-/_ide_helper.php
