--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "~3.3",
         "gajus/dindent": "^2.0",
         "gorhill/php-fine-diff": "dev-multibyte",
+        "jumbojett/openid-connect-php": "^0.5.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelnews/laravel-twbs4": "^1.2",
