--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,19 @@
-APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATA_CONNECTION=mysql
+DB_DATA_HOST=127.0.0.1
+DB_DATA_PORT=3306
+DB_DATA_DATABASE=data
+DB_DATA_USERNAME=govbackup_readonly
+DB_DATA_PASSWORD=secret
+
+
+
+# Unused options below
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
